# portfolio

./: Cargo.toml  Dioxus.toml  Dockerfile  LICENSE-MIT  README.md  justfile  refs.md
assets/: carrousel.css  chakra-petch.css  home.css  main.css  project-card.css  project-page.css  tags.css  theme.css
src/: about_me.rs  api.rs  assets.rs  home.rs  main.rs  navbar.rs  prelude.rs  project_page.rs
src/components/: mod.rs
src/components/navbar/: component.rs
src/data/: global_config.rs  image.rs  mod.rs  project.rs  tag.rs  technology.rs
src/elements/: carrousel.rs  mod.rs  project_card.rs  tag.rs
src/utils/: color.rs  error.rs  ext.rs  loc_string.rs  macros.rs  mod.rs
test-config/: global_config.ron
test-config/projects/: project-bar.ron  project-foo.ron
test-config/tags/: csharp.ron  gdscript.ron  godot.ron  personal.ron  school.ron  test.ron  unity.ron
test-config/technologies/: csharp.ron  unity.ron
