[package]
name = "portfolio"
version = "0.1.0"
authors = ["Toni Zana <tonizana.dev@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
kinded = "0.5.0"
ron = { version = "0.12.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["time"] }

[features]
default = ["web", "server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:ron"]
