[package]
name = "portfolio"
version = "0.1.0"
authors = ["Toni Zana <tonizana.dev@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dioxus = { version = "0.7.5", features = ["router", "fullstack"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, features = ["router"] }
gloo-timers = { version = "0.4.0", features = ["futures"], optional = true }
image = { version = "0.25.10", default-features = false, features = ["rayon", "png", "jpeg", "gif", "webp"], optional = true }
itertools = "0.14.0"
kinded = "0.5.0"
ron = { version = "0.12.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["macros", "sync", "time"] }

[features]
default = ["web", "server"]
web = ["dioxus/web", "dep:gloo-timers"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:ron", "dep:image"]
